--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
-    "expo-image-picker": "~12.0.1"
+    "expo-image-picker": "~12.0.1",
+    "expo-barcode-scanner": "~11.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
