--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@react-navigation/native-stack": "^6.6.2",
     "axios": "^0.27.2",
     "expo": "^44.0.0",
+    "expo-barcode-scanner": "~11.2.0",
+    "expo-image-picker": "~12.0.1",
     "expo-status-bar": "~1.2.0",
     "native-base": "3.4.0",
     "react": "17.0.1",
@@ -31,6 +33,7 @@
     "react-hook-form": "^7.33.1",
     "react-native": "0.64.3",
     "react-native-anchor-carousel": "^4.0.1",
+    "react-native-qrcode-svg": "^6.1.2",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
@@ -39,9 +42,7 @@
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.1",
-    "expo-image-picker": "~12.0.1",
-    "expo-barcode-scanner": "~11.2.0"
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
